--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Lincoln, Abraham, 1809-1865 -- Poetry'
 - !lcc 'E456'
+- GITenberg
 title: 'The Poets'' Lincoln
 
   Tributes in Verse to the Martyred President'
